# IMAC-Man

./: CMakeLists.txt
IMACMan/: CMakeLists.txt  main.cpp
IMACMan/include/: Board.h  Camera.hpp  Case.hpp  GameApp.h  Ghost.h  IndexBuffer.hpp  Labyrinth.h  Model.hpp  OpenGLHandler.hpp  Pacman.h  Personnage.h  Renderer.hpp  Sphere.hpp  VertexArrayBuffer.hpp  VertexBuffer.hpp
IMACMan/shaders/: 3D.fs.glsl  3D.vs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  tex3D.fs.glsl
IMACMan/src/: Board.cpp  Camera.cpp  Case.cpp  GameApp.cpp  Ghost.cpp  IndexBuffer.cpp  Labyrinth.cpp  Model.cpp  OpenGLHandler.cpp  Pacman.cpp  Personnage.cpp  Renderer.cpp  Sphere.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp
glOverload/: CMakeLists.txt
glOverload/include/: Renderer.hpp  VertexArrayBuffer.hpp  VertexBuffer.hpp
glOverload/src/: VertexArrayBuffer.cpp  VertexBuffer.cpp
glimac/: CMakeLists.txt
glimac/include/glimac/: FreeFlyCamera.hpp  Image.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  TrackBallCamera.hpp
glimac/src/: Image.cpp  SDLWindowManager.cpp
